--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 <body>
 	<main>
+		<div class="profile-pic">
+			<img src="https://i.imgur.com/ms6pCtK.png" alt="Profile Picture">
+		</div>
 		<div class="intro">@rxsklife</div>
 		<div class="tagline">OSINT | Infosec | Threat Intelligence | Fraud Prevention</div>
 		<div class="icons-social">
