--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<img src="https://i.imgur.com/ms6pCtK.png" alt="Profile Picture">
 		</div>
 		<div class="intro">@rxsklife</div>
-		<div class="tagline">OSINT | Infosec | Threat Intelligence | Fraud Prevention</div>
+		<div class="tagline">OSINT • Infosec • Threat Intelligence • Fraud Prevention</div>
 		<div class="icons-social">
 			<a target="_blank" href="https://t.me/rxsklife">
         <i class="fab fa-telegram" aria-hidden="true" title="Telegram"></i>
