Add iframe for public profile badge

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</div>
 		<div class="intro">@rxsklife</div>
 		<div class="tagline">OSINT • Threat Intelligence • Fraud Prevention</div>
+		<iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=1454241" style='border:none;'></iframe>
 		<div class="icons-social">
 			<a target="_blank" href="https://t.me/rxsklife">
         <i class="fab fa-telegram" aria-hidden="true" title="Telegram"></i>
